--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         Hello World
-        <a href="/privacy/">privacy</a>
+        <a href="/privacy">privacy</a>
         <a href="/about">about</a>
         <a href="/app-ads.txt">app-ads</a>
     </body>
